# copilotkit-runtime-porting

./: .gitignore  .gitmodules
_docs/: agents.md  comparison-gemini.md  copilotruntime-specification-blue.md  copilotruntime-specification-green.md  copilotruntime-specification-red.md  phase1-completion-summary.md  phase1-execution.md  porting-implementation.md  porting-plan.md
_docs/go/: copilotruntime-go-specification-ag-ui.md  copilotruntime-go-specification-full copy.md
_docs/others/: copiloruntime-specification-full-cursor.md  copiloruntime-specification-full-gemini.md  copiloruntime-specification-full-rovo.md  copilotruntime-specification-blue.md  copilotruntime-specification-comparison.md  copilotruntime-specification-full-claude.md  copilotruntime-specification-green.md  copilotruntime-specification-purple.md  copilotruntime-specification-red.md
_docs/sk/: copilotruntime-semantic-kernel-claude.md  copilotruntime-semantic-kernel-complete-claude.md  copilotruntime-semantic-kernel-cursor.md  copilotruntime-semantic-kernel-gemini.md  copilotruntime-semantic-kernel-rovo.md
python/: .coverage  .gitignore  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_EXECUTION.md  PHASE2_FINAL_STATUS.md  PHASE2_STATUS_REPORT.md  README.md  coverage.xml  env.example  langgraph_chef_agent.py  langgraph_chef_api.py  pyproject.toml  scripts.py  validate_phase1.py  validate_phase2.py
python/agui_runtime/: __init__.py
python/agui_runtime/runtime_py/: __init__.py  cli.py
python/agui_runtime/runtime_py/app/: __init__.py  main.py  middleware.py  runtime_mount.py
python/agui_runtime/runtime_py/core/: __init__.py  provider.py  runtime.py  types.py
python/agui_runtime/runtime_py/graphql/: __init__.py  context.py  errors.py  schema.py
python/agui_runtime/runtime_py/providers/: __init__.py
python/agui_runtime/runtime_py/storage/: __init__.py  base.py  manager.py  memory.py
python/copilotkit/: __init__.py
python/copilotkit/runtime_py/: __init__.py  cli.py
python/copilotkit/runtime_py/app/: __init__.py  main.py  middleware.py  runtime_mount.py
python/copilotkit/runtime_py/core/: __init__.py  provider.py  runtime.py  types.py
python/copilotkit/runtime_py/graphql/: __init__.py  schema.py
python/copilotkit/runtime_py/providers/: __init__.py
python/copilotkit/runtime_py/storage/: __init__.py
python/tests/: __init__.py  test_graphql_schema.py  test_state_store.py
python/tests/integration/: test_basic_integration.py  test_phase1_integration.py
python/tests/unit/: __init__.py  test_middleware.py  test_runtime.py  test_runtime_graphql_integration.py
reference-copilotkit-runtime/: .env  package.json  pnpm-lock.yaml  server.ts
sample-frontend/: components.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
sample-frontend/src/: App.tsx  main.tsx
sample-frontend/src/app/: providers.tsx  theme-context.tsx  theme-provider.tsx
sample-frontend/src/components/ui/: button-variants.ts  button.tsx
sample-frontend/src/lib/: config.ts
sample-frontend/src/styles/: globals.css
