[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "langgraph>=0.2.34",
    "langchain-openai>=0.3.29",
    "langchain-google-genai>=2.0.0",
    "copilotkit>=0.1.58",
    "python-dotenv>=1.1.1",
]
